src/test/deca/context/valid/sansObjet/cast.deca
// Description :
//    Cast de float défini à int
//
// Resultats :
// ok


{
    int a;
    float b;
    b = 5.6;
    a = (int) (b);
}